# cemer

./: AUTHORS  CMakeLists.txt  COPYING  CTestConfig.cmake  ChangeLog  ChangeLog.html  Conditionals.am  DartConfiguration.tcl  Makefile  Makefile.am  Makefile.in  Maketa.am  Moc.am  NEWS  README  README.md  README.txt  acsite.m4  aminclude.am  blah  build_all.sh  build_all_dbg.sh  cmake_config.h.in  cmake_temt_version.h.in  config.h  config.h.in  configure  configure.ac  configure.std  custom.h  findgrep  grep_all  grep_all_cpp  grep_all_h  monitor-emergent-cluster-runs.py  pdp++-3.5.spec  pdp-4.0.spec  pgo  postinstall-pak  postinstall-pak.in  (+16 more)
3dobj_lib/: CMakeLists.txt  Makefile.am  banana.iv  glass_brain_L.iv  glass_brain_R.iv  rat.iv
bench/actual/: CMakeLists.txt  bench_results_anal.proj  bp_bench.proj  leabra_bench.proj  leabra_bench_1000.proj  leabra_bench_results.ods  leabra_outer_loop.proj  run_bp_bench.sh  run_leabra_bench.sh
bench/x64_cuda/: CMakeLists.txt  README.txt  x64.cu  x64.h  x64cuda.cu  x64vec.cpp
bench/x64_vectorize/: CMakeLists.txt  README.txt  changelog.txt  instrset_detect.cpp  run_all_std.sh  run_large_std.sh  vectorclass.h  vectorf128.h  vectorf256.h  vectori128.h  x64vec.cpp  x64vec.h
demo/actr/: CMakeLists.txt  count.lisp  count.proj  demo2_vismotor.lisp  demo2_vismotor.proj  semantic.proj
demo/audioproc/: CMakeLists.txt  ap_beat.proj  harmonics.proj  sound_object.proj  vocal_tract.proj
demo/data_proc/: CMakeLists.txt  Makefile.am  MatrixSandbox.proj  anova.proj  ca_eq_sim.proj  canvas_drawing.proj  data_calc_loop.proj  data_tutorial.proj  data_tutorial_final.proj  epoch_log_analysis.proj  epoch_log_analysis.sh  fft_image_xform.proj  get_dir_files_demo.proj  matrix_demo.proj
demo/leabra/: 12ax4s.proj  CMakeLists.txt  Makefile.am  ax_tutorial.proj  ax_tutorial_cptax.net  ax_tutorial_cptax.proj  ax_tutorial_cptax_pfcbg.proj  ax_tutorial_final.proj  basic_leabra_test.proj  basic_leabra_test_unitinhib.proj  err_driven_hidden.proj  leabra_flex_progs.proj  model_and_task.proj  param_search.proj  scalar_val_test.proj  seq_enc_rec_loop.proj  sim_tutorial.proj  sim_tutorial_final.proj  sim_tutorial_input_data.dtbl  simple_vis_search.proj
demo/programs/: CMakeLists.txt  program_examples.proj  random_numbers.proj
demo/virt_env/: CMakeLists.txt  GrangerRainbow.tif  Makefile.am  cereb_arm.proj  ve_arm.proj  vis_color_test.proj  vis_motion_test.proj  vis_test.proj  vis_test_shadow.proj
plugins/audioproc/: CMakeLists.txt  Makefile.gcc.maketa  ap_files.cpp  ap_files.h  audioproc.cpp  audioproc.h  audioproc.pro  audioproc_def.h  audioproc_pl.cpp  audioproc_pl.h  configure  gammatone.cpp  gammatone.h
prog_lib/: 12axAll.progp  12axEpoch.prog  12axTrial.prog  ActBasedRField.prog  ApplyInputs.prog  ApplyInputsImage.prog  ApplyInputsPBWM.prog  BpAll_Std.progp  BpAll_Test.progp  BpBatch.prog  BpEpoch.prog  BpEpochMonitor.prog  BpStartup.prog  BpTestAll.progp  BpTrain.prog  BpTrial.prog  BpTrialMonitor.prog  CMakeLists.txt  CPT12axAll.progp  CanvasDemo.prog  CategoryCompare.prog  ChooseNextEvent.prog  ConfigNetwork.prog  CsAll_Std.progp  CsAll_Test.progp  CsBatch.prog  CsCycle.prog  CsEpoch.prog  CsEpochMonitor.prog  CsSettle.prog  CsStartup.prog  CsTrain.prog  CsTrial.prog  CsTrialMonitor.prog  CtLeabraSettle.prog  CtLeabraSettleTest.prog  CycleTrajAnal.prog  CycleTrajStat.prog  DataCalcSample.prog  EpochCompare.prog  (+69 more)
src/bp/: Makefile.am  Makefile.in  Resource.h  bp.cpp  bp.def  bp.h  bp.vcproj  bp_TA.cpp  bp_TA_inst.h  bp_TA_type.h  bp_def.h  bp_seq.def  bp_ti.cpp  bp_v3.h  bp_v3_compat.cpp  bp_v3_compat.h  bp_vt.cpp  bpdefaults  files.mta  main.cpp  main_debug.cpp  rbp.cpp  rbp.def  rbp.h  rbp_ap.def  rbp_v3.h  startup.css
src/cs/: Makefile.am  Makefile.in  cs.cpp  cs.def  cs.h  cs_def.h  cs_det.def  cs_iac.def  cs_prob_env.def  cs_ti.cpp  cs_v3_compat.cpp  cs_v3_compat.h  cs_vt.cpp  main.cpp
src/css/: Makefile.am  Makefile.in  TODO  css.vcproj  css_basic_types.cpp  css_basic_types.h  css_builtin.cpp  css_builtin.h  css_c_ptr_types.cpp  css_c_ptr_types.h  css_console.cpp  css_console.h  css_def.h  css_extern_support.h  css_lex.cpp  css_machine.cpp  css_machine.h  css_misc_funs.cpp  css_misc_funs.h  css_parse.cpp  css_parse.h  css_parse.y  css_qt.cpp  css_qt.h  css_qtconsole.cpp  css_qtconsole.h  css_qtdata.cpp  css_qtdata.h  css_qtdialog.cpp  css_qtdialog.h  css_qttype.cpp  css_qttype.h  css_special_math.cpp  css_special_math.h  css_ta.cpp  css_ta.h  css_ti.cpp  hard_of_css.h  main.cpp  mk_css_parse  (+5 more)
src/css_bin/: Makefile.am  Makefile.in  gdb_run  main.cpp
src/leabra/: Makefile.am  Makefile.in  TODO  files.mta  leabra.cpp  leabra.h  leabra_TA.cpp  leabra_TA_inst.h  leabra_TA_type.h  leabra_def.h  leabra_extra.cpp  leabra_extra.h  leabra_pbwm.cpp  leabra_pbwm.h  leabra_pvlv.cpp  leabra_pvlv.h  leabra_td.cpp  leabra_td.h  leabra_ti.cpp  leabra_v3_compat.cpp  leabra_v3_compat.h  main.cpp
src/maketa/: Makefile.am  Makefile.in  acsite.m4  configure.ac  maketa.cpp  maketa.h  maketa.sln  maketa.vcproj  maketa_TA_type.h  maketa_config.h  maketa_ti.cpp  mta_constr.cpp  mta_constr.h  mta_gendoc.cpp  mta_lex.cpp  mta_parse.cpp  mta_parse.h  mta_parse.output  mta_parse.y  stdafx.h  ta_base.h  ta_def.h  ta_filer.h  ta_list.cpp  (+18 more)
test/: 12ax4s_demo.proj  12ax4s_demo_v4.proj  12ax4s_demo_v4_cvt.proj  CMakeLists.txt  DebugUpdatePointersBug2398.proj  GuiDialogTest.proj  LeabraFlexParamSetExperiment.proj  Makefile.am  Makefile.in  SimpleLines5x5.dtbl  TestItemChooser.proj  TestLookupParse.proj  TestPointerUpdates.proj  TestPointerUpdatesInProgress.proj  TestProgVar.proj  TestUserData.proj  ViewTest_xor.proj  actr.proj  bp_std.proj  connect_crash.proj  continuous_delta_lrn.proj  cs_ra.proj  cs_std.proj  gsl_tests.proj  hv.v4_adaptabsonly.proj  hv.v4_adaptnetin.proj  hv.v4_adaptnone.proj  hv.v4good_05_20_06.proj  hv.v4good_05_20_06_v4.proj  hv.v4good_05_20_06_v4_cvt.proj  imgproc_test.proj  jsonBasicDataTableTest.json  leabra_4d.proj  leabra_ra.proj  leabra_ra.proj.bkup  leabra_ra25.proj  leabra_ra_ct.proj  leabra_sele.proj  leabra_startup.css  leabra_std.proj  (+26 more)
(+11753 files in other folders)
